<resources>
    <string name="app_name">GetInLine</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_retype_password_hint">Retype password</string>
    <string name="registration_date_of_birth_hint">Date of birth</string>
    <string name="registration_button_add_avatar">Add avatar</string>
    <string name="registration_register_button_text">Register</string>
    <string name="splash_app_name">GetInLine</string>
    <string name="please_wait">Please wait...</string>
</resources>
