<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_spacing"
            android:orientation="vertical"
            tools:context=".activities.RegisterActivity">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/registration_avatar_icon"
                    android:src="@mipmap/ic_launcher"
                    android:layout_margin="@dimen/default_spacing"
                    android:scaleType="fitXY"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_avatar_button"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/default_spacing"
                    android:text="@string/registration_button_add_avatar"
                    />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/registration_email"
                      android:hint="@string/registration_email_hint"
                    />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/registration_password_hint"
                      android:id="@+id/registration_password"
                      android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/registration_retype_password"
                      android:inputType="textPassword"
                      android:hint="@string/registration_retype_password_hint"
                    />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/registration_date_of_birth_hint"
                      android:id="@+id/registration_birthdate"
                    />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/registration_email_hint"
                    />

        </android.support.design.widget.TextInputLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_register_button_text"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:id="@+id/register_user_button"/>

    </LinearLayout>
</ScrollView>
